--- a/css/history.css
+++ b/css/history.css
@@ -21,7 +21,7 @@
     content: "•";
     position: absolute;
     left: 0;
-    color: #d17a40;
+    color: #a8522c;
     font-size: 1.2rem;
   }
   
