--- a/css/sections.css
+++ b/css/sections.css
@@ -7,7 +7,7 @@
   
   .meaning i {
     font-size: 3rem;
-    color: #d17a40;
+    color: #a8522c;
     margin-bottom: 10px;
   }
   
