--- a/css/showcase.css
+++ b/css/showcase.css
@@ -44,7 +44,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background: #d17a40;
+    background: #a8522c;
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
